<resources>
    <string name="app_name">LBS</string>

    <array name="touristArray">
        <item>预约导游</item>
        <item>POI检索</item>
        <item>查看天气</item>
        <item>个人中心</item>
    </array>
    <array name="guideArray">
        <item>带团信息</item>
        <item>需求信息</item>
        <item>预约信息</item>
        <item>个人中心</item>
    </array>

    <array name="exampleOneArray">
        <item>微信</item>
        <item>通讯录</item>
        <item>发现</item>
        <item>我</item>
    </array>

    <string name="weather_live">实时</string>
    <string name="report_time">发布时间</string>
    <string name="weather_forecast">预报</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="gpsRadio">GPS</string>
    <string name="netRadio">Net</string>
    <string name="slogan">Location Based Service</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登陆</string>
    <string name="login_username_hint">请输入Email账号</string>
    <string name="register_txt1">还没账号？</string>
    <string name="register_txt2">立即注册</string>
    <string name="login_account">账号</string>
    <string name="login_pwd">密码</string>
    <string name="register">注册</string>
    <string name="login_email">确认密码</string>
    <string name="login_email_hint">请再次输入密码</string>
    <string name="register_account">注册账号</string>
    <string name="add_diary">添加旅行日记</string>
    <string name="diary_title">标题:</string>
    <string name="diary_title_hint">请输入日记标题</string>
    <string name="diary_date">时间:</string>
    <string name="diary_date_hint">请选择时间</string>
    <string name="diary_content">内容</string>
    <string name="diary_content_hint">请输入日记内容</string>
    <string name="add">添加</string>
    <string name="back">返回</string>
    <string name="action_settings">Settings</string>
</resources>
