<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentBottom="false"
    android:layout_alignWithParentIfMissing="false"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">


        <ImageButton
            android:id="@+id/img_back"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:scaleType="centerInside"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="7dp"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:src="@drawable/login_icon_back" />

        <TextView
            android:id="@+id/edit_sign_mine_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:text="@string/add_diary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff"/>

    </RelativeLayout>
    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/diary_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/diary_title"
            style="@style/Register_Edit"
            android:hint="@string/diary_title_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/diary_date"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/diary_date"
            style="@style/Register_Edit"
            android:hint="@string/diary_date_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            style="@style/Register_Input"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/diary_content"
                style="@style/Register_Edit"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:enabled="true"
                android:scrollbars="vertical"
                android:minLines="1"
                android:maxLines="20"
                android:hint="@string/diary_content_hint" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:text="@string/add"
            android:textColor="@color/base_color_text_white"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:text="@string/back"
            android:textColor="@color/base_color_text_white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>