<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">


        <ImageButton
            android:id="@+id/img_back"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:scaleType="centerInside"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="7dp"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:src="@drawable/login_icon_back" />



        <TextView
            android:id="@+id/edit_sign_mine_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:text="@string/register_account"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff"/>

    </RelativeLayout>


    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_email"
            style="@style/Register_Edit"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_password"
            style="@style/Register_Edit"
             android:inputType="textPassword"
            android:hint="@string/login_password_hint" />
    </LinearLayout>

    <LinearLayout 
        style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_confirm_password"
            style="@style/Register_Edit"
             android:inputType="textPassword"
            android:hint="@string/login_email_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">
            <RadioButton
                android:id="@+id/btn_tourists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="游客"
                android:textSize="16sp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/btn_tourGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="导游"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>
   <!-- <Spinner
        android:id = "@+id/spinner_spName"
        android:layout_width = "match_parent"
        android:layout_height ="wrap_content"
        android:visibility="invisible">
    </Spinner >-->

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="18sp" />

</LinearLayout>